--- a/Front-end-Chatter/package.json
+++ b/Front-end-Chatter/package.json
@@ -8,12 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.2.1",
+    "axios": "^1.3.5",
     "bootstrap-icons": "^1.10.3",
     "bootstrap-icons-vue": "^1.10.3",
     "bootstrap-vue": "^2.23.1",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
